Improved the help menu by adding new methods to CommandHandler.java so new handlers can just add their description and help, and the help handler will dynamically load them