@@ -1,84 +1,84 @@
 package com.avishai.bot.handlers;
 
-import com.avishai.bot.core.CommandContext;
 import com.avishai.bot.config.BotCommands;
+import com.avishai.bot.core.CommandContext;
+import lombok.RequiredArgsConstructor;
 
-import java.util.Arrays;
 import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
+@RequiredArgsConstructor
 public class HelpHandler implements CommandHandler {
+    private final List<CommandHandler> registeredHandlers;
+
     @Override
     public List<String> getCommandSignature() {
-        return Arrays.asList(BotCommands.START, BotCommands.HELP);
+        return List.of(BotCommands.START, BotCommands.HELP);
+    }
+
+    @Override
+    public String getCategory() {
+        return "⚙️ Monitoring & Admin";
+    }
+
+    @Override
+    public String getDescription() {
+        return "Show control menu";
     }
 
     @Override
     public void handle(CommandContext ctx) {
-        String text = "";
-        if (ctx.update().hasMessage() && ctx.update().getMessage().hasText()) {
-            text = ctx.update().getMessage().getText();
-        }
+        String action = ctx.getActionData();
+        String[] parts = action.split("\\s+");
 
-        String[] parts = text.split("\\s+");
-
-        // For requests like "/help docker"
         if (parts.length > 1) sendDetailedHelp(ctx, parts[1].toLowerCase());
         else sendGeneralHelp(ctx);
     }
 
     private void sendGeneralHelp(CommandContext ctx) {
-        String helpText = """
+        // Group all handlers by their category dynamically
+        Map<String, List<CommandHandler>> groupedHandlers = registeredHandlers.stream()
+                .filter(h -> !h.getDescription().isEmpty())
+                .collect(Collectors.groupingBy(CommandHandler::getCategory));
+
+        StringBuilder helpText = new StringBuilder();
+        helpText.append("""
                 🤖 <b>Home Server Manager</b>
-                ━━━━━━━━━━━━━━━━━━
-                Select a command below or use the native Menu button in the bottom left.
                 
-                🎧 <b>Media & Storage</b>
-                • /spotisync - Start Spotify to Nextcloud synchronization
+                Select a command below or use the native Menu button.
                 
-                🐳 <b>Infrastructure</b>
-                • /docker - View running containers and restart services
-                
-                📊 <b>Monitoring & Admin</b>
-                • /sysinfo - View hardware health and system metrics
-                • /updatebot - Pull latest code, recompile, and restart daemon
-                
-                ℹ️ <b>Pro Tip:</b> Type <code>/help docker</code> for advanced syntax.
-                """;
-        ctx.reply(helpText);
+                """);
+
+        // Render each category and its commands
+        groupedHandlers.forEach((category, handlers) -> {
+            helpText.append("<b>").append(category).append("</b>\n");
+            for (CommandHandler handler : handlers) {
+                // Use the first command signature as the primary display command
+                helpText.append(handler.getCommandSignature().get(0))
+                        .append(" - ")
+                        .append(handler.getDescription())
+                        .append("\n");
+            }
+            helpText.append("\n");
+        });
+
+        helpText.append("💡 <b>Pro Tip:</b> Type <code>/help [command]</code> for advanced syntax.");
+        ctx.reply(helpText.toString());
     }
 
     private void sendDetailedHelp(CommandContext ctx, String topic) {
-        String response = switch (topic) {
-            case "docker", "/docker" -> """
-                    🐳 <b>Docker Manager - Manual</b>
-                    ━━━━━━━━━━━━━━━━━━
-                    <b>Interactive UI:</b>
-                    Type <code>/docker</code> to get clickable buttons.
-                    
-                    <b>Direct CLI Commands:</b>
-                    • <code>/docker restart &lt;container&gt;</code>
-                    • <code>/docker logs &lt;container&gt; [lines] [format]</code>
-                    
-                    <b>Log Arguments (Optional):</b>
-                    • <code>lines</code>: Amount of lines to fetch (Default: 20)
-                    • <code>format</code>: Output mode. Use <code>text</code>, <code>file</code>, or <code>auto</code> (Default: auto)
-                    
-                    <b>Examples:</b>
-                    <code>/docker logs nextcloud 100</code>
-                    <code>/docker logs nextcloud 500 file</code>
-                    """;
-            case "spotisync", "/spotisync" -> """
-                    🎧 <b>Spotify Sync - Manual</b>
-                    ━━━━━━━━━━━━━━━━━━
-                    Executes SpotDL via system shell and updates Nextcloud index.
-                    
-                    <b>Commands:</b>
-                    • <code>/spotisync</code> - Start the sync process
-                    • <code>/stop_spotisync</code> - Send SIGTERM to the process tree
-                    """;
-            default ->
-                    "⚠️ No detailed documentation found for <code>" + topic + "</code>. Type /help for the main menu.";
-        };
-        ctx.reply(response);
+        String searchTarget = "/" + topic;
+
+        registeredHandlers.stream()
+                .filter(h -> h.getCommandSignature().contains(searchTarget) ||
+                        h.getCommandSignature().contains(topic)
+                )
+                .findFirst()
+                .ifPresentOrElse(
+                        handler -> ctx.reply(handler.getDetailedHelp()),
+                        () -> ctx.reply("⚠️ No detailed documentation found for that topic. " +
+                                "Type /help for the main menu.")
+                );
     }
 }
